<resources>

    <string name="app_name">MobiMen</string>
    <string name="label_login">логин</string>
    <string name="label_password">пароль</string>
    <string name="button_login">ВОЙТИ В СИСТЕМУ</string>
    <string name="authEmptyCredentials">Введите корректный логин и пароль</string>
    <string name="please_wait">Выполняется операция</string>
    <string name="i_got_it">Я понял</string>
    <string name="google_maps_api_key">0n7IqmcMRCnDYfxEdmJWdykrbYwOBFa2xylOxIw</string>

    <string name="targets">ЦЕЛИ</string>
    <string name="routes">МАРШРУТЫ</string>
    
    <!-- Main menu items -->
    <string name="settings">Настройки</string>
	<string name="about">О программе</string>
	<string name="showObjects">Объекты управления</string>
	<string name="showLegend">Показать легенду</string>
    <string name="showMyself">Текущее местоположение</string>
    <string name="refresh">Обновить данные</string>
    <string name="actionChangeUser">Сменить пользователя</string>
    <string name="search">Поиск</string>
    
    <string name="loading">Загрузка</string>
    <string name="waiting">Ожидайте</string>
   	<string name="cancel">Отмена</string>
   	<string name="install">Установить</string>
   	<string name="download">Загрузить</string>
    <string name="update">Обновить</string>
   	<string name="calendar">Календарь</string>
    
    <string name="contentDescription" />
    
    <string name="mainServer">http://sfs.magnat.ru:8081/</string>
    <string name="mainServerSecure">https://sfs.magnat.ru:8081/</string>
    <string name="syncServer">http://sfs.magnat.ru:8081/sm_auth2</string>
    <string name="syncServerSecure">https://sfs.magnat.ru:8443/sm_auth2</string>

    <string name="syncSuccess">Синхронизация успешно завершена</string>
    <string name="syncError">Синхронизация не выполненна</string>
    <string name="syncCanceled">Синхронизация отменена</string>
    
    <string name="titleMap">КАРТА</string>
    <string name="titlePsrs">ТОРГОВЫЕ АГЕНТЫ</string>
    <string name="titleStores">ТОРГОВЫЕ ТОЧКИ</string>
    <string name="titleCustomers">КОНТРАГЕНТЫ</string>
    <string name="titleTrack">МАРШРУТЫ</string>
    
    <string name="syncLastSuccessAttempt">Последняя успешная синхронизация </string>
    
    <string name="emptyList">Нет элементов</string>
    <string name="showOnMap">Показать на карте</string>
    <string name="locationUnavailable">Местополжение недоступно</string>
    <string name="locationAvailable">Местополжение доступно</string>
    <string name="manager">Мобильный менеджер</string>
    <string name="address">[address]</string>
    <string name="name">[name]</string>
    
    <string name="crash_message">Программа остановлена, отчет об ошибке отправлен автоматически</string>
    
    <string name="channel">[channel]</string>
    
    <string name="golden_status">[golden_status]</string>
    
    <string name="title">[title]</string>
    
    <string name="subtitle">[subtitle]</string>
    
    <string name="description">[description]</string>
    
    <string name="staticmaptitle">[staticmaptitle]</string>
    
    <string name="totalDistribution">Общая дистрибьюция (ОПД)</string>
    <string name="goldenDistribution">Золотая дистрибьюция</string>
    <string name="turnoverCurrentMonth">Товарооборот за текущий месяц</string>
    <string name="turnoverPreviousMonth">Товарооборот за предыдущий месяц</string>
    <string name="lastVisit">Дата прошлого посещения</string>
    <string name="nextVisit">Дата следующего посещения</string>
    
    <string name="chooseAccount">Выберите учетную запись:</string>
    
    <string name="drawer_title">Navigation</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <!-- Обновление -->
    <string name="update_loading">Загрузка обновления</string>
    <string name="update_loading_complete">Загрузка обновления завершена</string>
    <string name="update_check">Проверка обновления</string>
    <string name="update_update_unavailable">Обновлений нет</string>
    <string name="update_update_available">Доступна новая версия: %s</string>
    <string name="update_install">Установить обновление сейчас?</string>
    
    <string name="sessionActive">Сессия действительна</string>
    <string name="sessionExpired">Сессия недействительна</string>
    
    <string name="addUser">Новый пользователь</string>
    <string name="addUserDescription">Добавить учетную запись</string>
    <string name="chooseUser">Выберите пользователя:</string>
    <string name="authError">Неправильная пара логин/пароль</string>
    <string name="target">цель</string>
    <string name="fact">факт</string>
    <string name="index">индекс</string>
    <string name="initalization">инициализация приложения</string>
</resources>
