<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/actionChangeUser"
        android:icon="@drawable/ic_action_person"
        android:showAsAction="always"
        android:title="@string/actionChangeUser"/>
    <item
        android:id="@+id/actionSync"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="always"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/checkUpdates"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/update"/>
    <item
        android:id="@+id/actionAbout"
        android:showAsAction="always"
        android:title="@string/about"/>

</menu>
