<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
         <item
        android:id="@+id/actionSettings"
        android:showAsAction="never"
        android:title="@string/settings"/>
    -->
    <item
        android:id="@+id/actionLocation"
        android:icon="@drawable/ic_action_location_found"
        android:showAsAction="ifRoom"
        android:title="@string/showMyself"/>
    <item
        android:id="@+id/actionObjects"
        android:icon="@drawable/ic_action_group"
        android:showAsAction="ifRoom"
        android:title="@string/showObjects"/>
    <item
        android:id="@+id/actionLegend"
        android:icon="@drawable/ic_action_chat"
        android:showAsAction="ifRoom"
        android:title="@string/showLegend"/>
    <item
        android:id="@+id/actionSync"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/refresh"/>
    <!--
         <item
        android:id="@+id/actionAbout"
        android:showAsAction="never"
        android:title="@string/about"/>
    -->

</menu>