<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frame" >

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/title"
        android:text="@string/subtitle"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/selected_caption1"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subtitle"
        android:layout_below="@+id/subtitle"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/selected_caption1" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/view1"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>