<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frame" >

    <ru.magnat.smnavigator.widget.StaticMapView
        android:id="@+id/staticmap"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/contentDescription" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/staticmap"
        android:layout_toLeftOf="@+id/actions"
        android:layout_toRightOf="@+id/staticmap"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/staticmaptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/staticmap"
        android:layout_alignRight="@+id/staticmap"
        android:layout_below="@+id/staticmap"
        android:gravity="center_horizontal"
        android:text="@string/staticmaptitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/selected_caption1"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/title"
        android:text="@string/subtitle"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/selected_caption1"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subtitle"
        android:layout_below="@+id/subtitle"
        android:layout_toLeftOf="@+id/actions"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/selected_caption1" />

    <ImageView
        android:id="@+id/actions"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/details_button"
        android:contentDescription="@string/contentDescription" />

    <ru.magnat.smnavigator.widget.ExpandingLayout
        android:id="@+id/expanding_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </ru.magnat.smnavigator.widget.ExpandingLayout>

</RelativeLayout>